// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableSplitscreen renders a text-based element 1`] = `
<div
  className="DraggableSplitscreen sc-bdVaJa cQtrjW"
>
  <div
    className="DraggableSplitscreen__left-side sc-bwzfXH uTxCW"
  >
    <div
      style={
        Object {
          "backgroundColor": "blue",
          "padding": "6rem",
        }
      }
    >
      <h2>
        Left side
      </h2>
    </div>
  </div>
  <div
    className="DraggableSplitscreen__right-side sc-htpNat hkAeFy"
    style={
      Object {
        "clipPath": "inset(0 0 0 calc(50% + 0px))",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "red",
          "padding": "6rem",
          "textAlign": "right",
        }
      }
    >
      <h2>
        Right side
      </h2>
    </div>
  </div>
  <div
    className="DraggableSplitscreen__handle react-draggable sc-bxivhb kRBqZl"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "touchAction": "none",
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;

exports[`DraggableSplitscreen renders a video-based element 1`] = `
<div
  className="DraggableSplitscreen sc-bdVaJa cQtrjW"
>
  <div
    className="DraggableSplitscreen__left-side sc-bwzfXH uTxCW"
  >
    <video
      autoPlay={true}
      loop={true}
      muted={true}
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
      style={
        Object {
          "height": "auto",
          "objectFit": "inherit",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="DraggableSplitscreen__right-side sc-htpNat hkAeFy"
    style={
      Object {
        "clipPath": "inset(0 0 0 calc(50% + 0px))",
      }
    }
  >
    <video
      autoPlay={true}
      loop={true}
      muted={true}
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
      style={
        Object {
          "height": "auto",
          "objectFit": "inherit",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="DraggableSplitscreen__handle react-draggable sc-bxivhb kRBqZl"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "touchAction": "none",
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;

exports[`DraggableSplitscreen renders an image-based element. 1`] = `
<div
  className="DraggableSplitscreen sc-bdVaJa cQtrjW"
>
  <div
    className="DraggableSplitscreen__left-side sc-bwzfXH uTxCW"
  >
    <img
      alt="Left Side"
      src="/react-draggable-splitscreen/example/assets/left-side.png"
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="DraggableSplitscreen__right-side sc-htpNat hkAeFy"
    style={
      Object {
        "clipPath": "inset(0 0 0 calc(50% + 0px))",
      }
    }
  >
    <img
      alt="Right Side"
      src="/react-draggable-splitscreen/example/assets/right-side.png"
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="DraggableSplitscreen__handle react-draggable sc-bxivhb kRBqZl"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "touchAction": "none",
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;
